# adventofcode2022

./: .gitignore  LICENSE
haskell/day1/: day1.cabal
haskell/day1/app/: Main.hs
haskell/day2/: day2.cabal
haskell/day2/app/: Main.hs
haskell/day3/: day3.cabal
haskell/day3/app/: Main.hs
haskell/day4/: day4.cabal
haskell/day4/app/: Main.hs
rust/day1/src/: main.rs
