cabal-version:      3.4
name:               day3
version:            0.1.0.0
author:             Esgariot
maintainer:         esgariot@icloud.com
build-type:         Simple
common warnings
    ghc-options: -Wall

executable day3
    import:           warnings
    main-is:          Main.hs
    build-depends:      base ^>=4.17.0.0,
                        parsec ^>= 3.1.15,
                        containers
    hs-source-dirs:   app
    default-language: GHC2021
